<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background"
    android:layout_height="match_parent">
    
    <include
        android:id="@+id/included_toolbar"
        layout="@layout/layout_toolbar"/>
    
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_request_tag"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textSize="22sp"
        tools:text="@string/profile_tag_request_tag_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/included_toolbar"
        android:layout_marginStart="42dp"
        android:textColor="@color/white"/>
    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_profile"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/default_user_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_request_tag"
        android:layout_marginEnd="48dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_hot_strong_person"
        style="@style/tagButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_request_tag"
        android:layout_marginStart="31dp"
        android:layout_marginTop="48dp"
        android:layout_width="125dp"
        android:text="@string/profile_tag_btn1"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_well_known"
        style="@style/tagButtonStyle"
        app:layout_constraintStart_toEndOf="@id/btn_hot_strong_person"
        app:layout_constraintTop_toTopOf="@id/btn_hot_strong_person"
        android:layout_marginStart="8dp"
        android:layout_width="89dp"
        android:text="@string/profile_tag_btn2"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_hot_place_tourist"
        style="@style/tagButtonStyle"
        app:layout_constraintStart_toEndOf="@id/btn_well_known"
        app:layout_constraintTop_toTopOf="@id/btn_hot_strong_person"
        android:layout_marginStart="8dp"
        android:layout_width="109dp"
        android:text="@string/profile_tag_btn3"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_children_taste"
        style="@style/tagButtonStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_hot_strong_person"
        android:layout_marginStart="27dp"
        android:layout_marginTop="16dp"
        android:layout_width="105dp"
        android:text="@string/profile_tag_btn4"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_sweet_lover"
        style="@style/tagButtonStyle"
        app:layout_constraintStart_toEndOf="@id/btn_children_taste"
        app:layout_constraintTop_toTopOf="@id/btn_children_taste"
        android:layout_marginStart="8dp"
        android:layout_width="94dp"
        android:text="@string/profile_tag_btn5"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_mint_chocolate_lover"
        style="@style/tagButtonStyle"
        app:layout_constraintStart_toEndOf="@id/btn_sweet_lover"
        app:layout_constraintTop_toTopOf="@id/btn_children_taste"
        android:layout_marginStart="8dp"
        android:layout_width="96dp"
        android:text="@string/profile_tag_btn6"
        />
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_jump"
        android:layout_width="166dp"
        android:layout_height="56dp"
        android:background="@drawable/background_jump_btn"
        android:text="@string/skip"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"
        android:layout_marginStart="40dp"/>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="139dp"
        android:layout_height="56dp"
        android:text="@string/next"
        android:background="@drawable/background_next_btn"
        app:layout_constraintStart_toEndOf="@id/btn_jump"
        app:layout_constraintBottom_toBottomOf="@id/btn_jump"
        android:layout_marginStart="12dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>