<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bottomsheet"
    app:behavior_expandedOffset="100dp"
    app:behavior_fitToContents="false"
    app:behavior_hideable="false"
    app:behavior_peekHeight="100dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        android:src="@drawable/ic_arrow_bottom"
        app:layout_constraintBottom_toBottomOf="@id/tv_login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_login_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="20dp"
        android:text="@string/login_phonenumber"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_phone_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="43dp"
        android:hint="@string/login_phonenumber_hint"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_login_phonenumber"
        app:layout_constraintTop_toBottomOf="@id/tv_login_phonenumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLines="1"
            app:text="@{viewModel.phoneNumber}" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/login_password"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_login_phonenumber"
        app:layout_constraintTop_toBottomOf="@id/layout_phone_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="43dp"
        android:hint="@string/login_password_hint"
        app:endIconMode="password_toggle"
        app:errorEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_login_phonenumber"
        app:layout_constraintTop_toBottomOf="@id/tv_login_password"
        app:passwordToggleDrawable="@drawable/ic_lock"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword"
            android:maxLines="1"
            app:text="@{viewModel.password}" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:text="@string/login_find_password"
        android:textSize="11sp"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="@id/layout_password_input"
        app:layout_constraintTop_toBottomOf="@id/layout_password_input" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/tv_login_phonenumber"
        app:layout_constraintTop_toBottomOf="@id/layout_password_input" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_auto_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_save"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/cb_auto_login"
        app:layout_constraintStart_toEndOf="@id/cb_auto_login"
        app:layout_constraintTop_toTopOf="@id/cb_auto_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="43dp"
        android:orientation="horizontal"
        android:weightSum="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_auto_login">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/shape_do_login"
            android:gravity="center"
            android:text="@string/signup"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:background="@drawable/shape_do_login"
            android:gravity="center"
            android:text="@string/login_do"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>