<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.user.signup.SignupPhoneInputFragment">

    <include
        android:id="@+id/included_toolbar"
        layout="@layout/layout_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/signup_step1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/included_toolbar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:text="@string/signup_phone_text1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_step" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_phone_text2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tv_text_1"
        app:layout_constraintTop_toBottomOf="@id/tv_text_1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_text_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_phone_text3"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tv_text_1"
        app:layout_constraintTop_toBottomOf="@id/tv_text_2" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_text_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_phone_text4"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_text_3"
        app:layout_constraintStart_toEndOf="@id/tv_text_3"
        app:layout_constraintTop_toTopOf="@id/tv_text_3" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_signup_phone"
        app:layout_constraintBottom_toBottomOf="@id/tv_text_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_text_1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="47dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="47dp"
        android:hint="@string/signup_Phone_ex"
        app:counterEnabled="true"
        app:counterMaxLength="11"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_text_4">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/til_et_phonenum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="phone"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_request"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="?attr/colorPrimary"
        android:gravity="center"
        android:text="@string/signup_request_verify"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/layoutProgress"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/trans_black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>