<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/main_background"
    android:layout_height="match_parent">
    
    <include
        android:id="@+id/included_toolbar"
        layout="@layout/layout_toolbar"/>
        
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_request_taste"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/included_toolbar"
        android:layout_marginStart="44dp"
        android:textStyle="bold"
        android:textSize="22sp"
        tools:text="@string/profile_taste_request_taste"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_request_taste"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="8dp"/>

    <LinearLayout
        android:id="@+id/layout_taste_amount_select"
        app:layout_constraintStart_toStartOf="@id/tv_request_taste"
        app:layout_constraintEnd_toEndOf="@id/iv_help"
        app:layout_constraintTop_toBottomOf="@id/tv_request_taste"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        android:layout_marginTop="32dp"
        android:layout_width="0dp"
        android:orientation="vertical"
        android:layout_height="0dp">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_taste_hot"
            android:layout_marginTop="32dp"
            android:text="@string/profile_taste_taste_hot"
            style="@style/tasteTitleStyle"
            android:drawableStart="@drawable/ic_hot"
            android:drawablePadding="4dp"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_hot"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            app:trackHeight="28dp"
            app:thumbRadius="0dp"
            style="@style/slider_style"
            app:trackColorActive="@color/hot_taste_track_color"
            app:trackColorInactive="@color/white" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            layout="@layout/layout_slider_explain"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_taste_sweet"
            android:layout_marginTop="32dp"
            android:text="@string/profile_taste_taste_sweet"
            style="@style/tasteTitleStyle"
            android:drawableStart="@drawable/ic_sweet"
            android:drawablePadding="4dp"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_sweet"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            app:trackHeight="28dp"
            app:thumbRadius="0dp"
            style="@style/slider_style"
            app:trackColorActive="@color/main_yellow"
            app:trackColorInactive="@color/white" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            layout="@layout/layout_slider_explain"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_taste_salty"
            android:layout_marginTop="32dp"
            android:text="@string/profile_taste_taste_salty"
            style="@style/tasteTitleStyle"
            android:drawableStart="@drawable/ic_salty"
            android:drawablePadding="4dp"/>

        <com.google.android.material.slider.Slider
            android:id="@+id/slider_salty"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            app:trackHeight="28dp"
            app:thumbRadius="0dp"
            style="@style/slider_style"
            app:trackColorActive="@color/salty_taste_track_color"
            app:trackColorInactive="@color/white" />

        <include
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            layout="@layout/layout_slider_explain"/>

    </LinearLayout>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:text="@string/register"
        android:background="@drawable/background_next_btn"
        app:layout_constraintStart_toStartOf="@id/tv_request_taste"
        app:layout_constraintEnd_toEndOf="@id/iv_help"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_explain"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@id/tv_request_taste"
        app:layout_constraintEnd_toEndOf="@id/iv_help"
        app:layout_constraintTop_toBottomOf="@id/tv_request_taste"
        android:layout_marginTop="16dp"
        android:layout_height="248dp"
        android:textSize="11sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:visibility="gone"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/profile_taste_explain"
        android:background="#2D2929"/>
    

</androidx.constraintlayout.widget.ConstraintLayout>